bsp-guishopmanager to genesis-inventorycommands

--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>BSP-GuiShopManager</groupId>
-  <artifactId>BSP-GuiShopManager</artifactId>
+  <groupId>Genesis-InventoryCommands</groupId>
+  <artifactId>Genesis-InventoryCommands</artifactId>
   <version>1.1.2</version>
-  <name>GuiShopManager</name>
+  <name>InventoryCommands</name>
   <description>Adds new ways to open a shop.</description>
 	<build>
-		<finalName>BSP-GuiShopManager</finalName>
+		<finalName>Genesis-InventoryCommands</finalName>
 		<resources>
 			<resource>
 				<targetPath>.</targetPath>
