--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,10 @@
-name: GuiShopManager
+name: InventoryCommands
 version: ${project.version}
-description: BossShopPro Addon - Allows opening GUIs in new ways
-author: Black_ixx
+description: Genesis Addon - Allows opening GUIs in new ways
+author: Black_ixx,ProMCTeam
 website: http://felix.neuby.de
-main: org.black_ixx.bossshop.addon.guishopmanager.GuiShopManager
-depend: [BossShopPro]
+main: com.promcteam.genesis.addon.guishopmanager.GuiShopManager
+depend: [Genesis]
 commands:
   gsm:
-   description: GUIShopManager command
+   description: InventoryCommands command
