Fix up rename stuff

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,9 @@
 name: InventoryCommands
 version: ${project.version}
 description: Genesis Addon - Allows opening GUIs in new ways
-author: Black_ixx,ProMCTeam
+author: Black_ixx,MageMonkeyStudios
 website: http://felix.neuby.de
-main: com.promcteam.genesis.addon.guishopmanager.GuiShopManager
+main: studio.magemonkey.genesis.addon.inventorycommands.InventoryCommands
 depend: [Genesis]
 commands:
   gsm:
