--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: InventoryCommands
 version: ${project.version}
 description: Genesis Addon - Allows opening GUIs in new ways
-author: Black_ixx,MageMonkeyStudios
+author: Black_ixx,MageMonkeyStudio
 website: http://felix.neuby.de
 main: studio.magemonkey.genesis.addon.inventorycommands.InventoryCommands
 depend: [Genesis]
